Minor Null Result message changes.

--- a/BlazorMovie/Components/UIComponents/PropertyComponents/BudgetPropComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PropertyComponents/BudgetPropComponent.razor
@@ -3,7 +3,7 @@
 <strong>Budget:</strong>
 @((movieDetails?.Budget != null && movieDetails.Budget != 0.00m)
         ? @movieDetails.Budget.ToString("C", new System.Globalization.CultureInfo("en-US"))
-        : "Budget Not Available")
+        : "Unavailable")
 
 @code {
     [Parameter]
