--- a/BlazorMovie/Components/UIComponents/PropertyComponents/OverviewPropComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PropertyComponents/OverviewPropComponent.razor
@@ -1,7 +1,7 @@
 ﻿@* OverviewPropComponent *@
 <p>
     @((movieDetails?.Overview != null) ? movieDetails.Overview
-        : "Overview Summary Not Available")
+        : "Overview Summary Unavailable")
 </p>
 @code {
 [Parameter]
