--- a/BlazorMovie/Components/UIComponents/PropertyComponents/StatusPropComponent.razor
+++ b/BlazorMovie/Components/UIComponents/PropertyComponents/StatusPropComponent.razor
@@ -1,7 +1,7 @@
 ﻿@* StatusPropComponent *@
 <strong class="me-2">Status:</strong>
 @((movieDetails?.Status != null) ? movieDetails.Status
-        : "Status Not Available")
+        : "Unavailable")
 
 @code {
     [Parameter]
