--- a/BlazorMovie/Components/UIComponents/PropertyComponents/PosterPropComponent.razor.css
+++ b/BlazorMovie/Components/UIComponents/PropertyComponents/PosterPropComponent.razor.css
@@ -1,4 +1,4 @@
-﻿.poster-container {
+﻿﻿.poster-container {
     max-height: 24rem;
     aspect-ratio: 2/3;
     position: relative;
@@ -8,9 +8,16 @@
     transform: translateY(50%)
 }
 
-    .poster-container img {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: cover;
-        cursor: default;
-    }
+.poster-container img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    cursor: default;
+}
+.placeholderText {
+    position: absolute;
+    color: #6c757d;
+    font-size: 1.2rem;
+    text-align: center;
+    font-weight: bold;
+}
