Refactored components to streamline, improve functionality

--- a/BlazorMovie/Components/UIComponents/CreditComponents/MainCreditComponent.razor
+++ b/BlazorMovie/Components/UIComponents/CreditComponents/MainCreditComponent.razor
@@ -15,11 +15,11 @@ else if (Cast is not null && Crew is not null)
 {
     <div class="col-12">
         <h4>Cast</h4>
-        <PersonCarouselComponent People="Cast.Cast<Person>().ToList()" />
+        <PersonCarouselComponent People="Cast" />
     </div>
     <div class="col-12 mt-4">
         <h4>Crew</h4>
-        <PersonCarouselComponent People="Crew.Cast<Person>().ToList()" />
+        <PersonCarouselComponent People="Crew" />
     </div>
 }
 else
