--- a/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor
+++ b/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor
@@ -1,14 +1,14 @@
 ﻿@*PersonCardComponent*@
 @using BlazorMovie.Models.Credits
+@using BlazorMovie.Components.UIComponents.PropertyComponents
 
 
 @if (Person != null)
 {
     <div class="card h-100 fade-in shadow p-3 mb-5 bg-body-tertiary rounded">
-        <img class="card-img-top" alt="Person Image"
-             src="@(string.IsNullOrEmpty(Person.ProfilePath)
-                 ? "/img/ProfilePlaceholder.png"
-                 : $"https://image.tmdb.org/t/p/w500/{Person.ProfilePath}")" />
+
+             <ProfileImageComponent ProfilePath="@Person.ProfilePath" />
+
         <div class="card-body border-top bg-light d-flex flex-column">
             <h5 class="card-title">@Person.Name</h5>
             <p class="card-text">@SubText</p>
@@ -19,7 +19,9 @@
 else
 {
     <div class="card h-100 shadow p-3 mb-5 bg-body-tertiary rounded">
-        <img class="card-img-top" alt="Person Image" src="/img/ProfilePlaceholder.png" />
+
+        <ProfileImageComponent ProfilePath="@null" />
+
         <div class="card-body border-top bg-lightd-flex flex-column ">
             <h5 class="card-title placeholder-glow">
                 <span class="placeholder col-6"></span>
