modified page to accept changes made to cacheService

--- a/BlazorMovie/Components/Pages/MoviePageComponent.razor
+++ b/BlazorMovie/Components/Pages/MoviePageComponent.razor
@@ -9,7 +9,7 @@
 @using BlazorMovie.Services.Interfaces
 @using System.Web;
 
-@inject MovieCacheService movieCacheService
+@inject CacheService cacheService
 @inject IMovieServiceFactory movieServiceFactory
 @inject ISearchMovieService searchMovieService
 @inject NavigationManager navManager
@@ -21,6 +21,7 @@ OnPageChanged="GetPage" />
 
 @code {
     private PageResponse<Movie>? movies;
+    private int CurrentPage { get; set; } = 1;
 
     #region PARAMETERS
     [Parameter]
@@ -90,7 +91,6 @@ OnPageChanged="GetPage" />
         }
     }
 
-
     #endregion
 
     #region FETCH MOVIES
@@ -98,23 +98,25 @@ OnPageChanged="GetPage" />
     {
         if (movieService is ISearchMovieService searchMovieService)
         {
+            string baseCacheKey = "Movies_Page";
             // Include SearchQuery in the cache key to differentiate search results
             string cacheKey = $"{Category}Page_{SearchQuery}_{page}";
 
-            return await movieCacheService.GetOrFetchMoviesAsync(
-                (p) => searchMovieService.GetMoviesAsync(p, SearchQuery),
-                // $"{Category}Page",
-                cacheKey,
-                page
-            );
+            return await cacheService.GetOrFetchAsync<PageResponse<Movie>>(
+            async () => await searchMovieService.GetMoviesAsync(CurrentPage),
+            baseCacheKey,
+            new { page = CurrentPage });
         }
         else if (movieService is IMovieService generalMovieService)
         {
-            //First, check if response is already cashed
-            return await movieCacheService.GetOrFetchMoviesAsync(
-                //If not, make API call and cashe the response
-                (p) => generalMovieService.GetMoviesAsync(p),
-                $"{Category}Page",
+            // Define a cache key unique to this category and page
+            string cacheKey = $"{Category}Page";
+
+            // Fetch the movies, leveraging caching
+            return await cacheService.GetOrFetchAsync<PageResponse<Movie>>(
+                // Define the API call function
+                async () => await generalMovieService.GetMoviesAsync(page),
+                cacheKey,
                 page
             );
         }
