--- a/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor.css
+++ b/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor.css
@@ -1,4 +1,4 @@
-﻿.card-hover {
+﻿/*.card-hover {
     position: relative;
     overflow: hidden;
 }
@@ -24,4 +24,4 @@
 .overlay-content {
     font-size: 0.9rem;
     line-height: 1.5;
-}
+}*/
