--- a/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor.css
+++ b/BlazorMovie/Components/UIComponents/CreditComponents/PersonCardComponent.razor.css
@@ -1,27 +1,9 @@
-﻿/*.card-hover {
-    position: relative;
-    overflow: hidden;
+﻿.cardBtn {
+    background-color: var(--sjw-golden-color);
+    color: var(--sjw-secondary-color);
+    font-size: 1rem;
+    font-weight: 800;
+    border: 2px solid;
+    border-color: var(--sjw-footer-font-color);
+    border-radius: 2rem;
 }
-
-.card-overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    color: white;
-    display: flex;
-    align-items: flex-end;
-    transform: translateY(100%);
-    transition: transform 0.3s ease-in-out;
-}
-
-.card-hover:hover .card-overlay {
-    transform: translateY(0);
-}
-
-.overlay-content {
-    font-size: 0.9rem;
-    line-height: 1.5;
-}*/
